test_programs/compile_failure/unary_not_on_field_type_variable/src/main.nr
fn main() {
    let num: Field = 0;
    assert_eq(!0, num);
}
